# NeteaseMusicPlayer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Pipfile  README.md  generate_qrc.py  qtquickcontrols2.conf  resources.qrc
api_json/: lyric.json  netease_creator.json  playlist_detail.json  song_detail.json  top_playlist.json  vip_creator.json  vip_type.txt
app/cpp/: CMakeLists.txt
app/cpp/MusicPlayer/: CMakeLists.txt  application.cc  application.h  asyncfuture.h  commons.h  json.h  main.cc  main.cpp
app/cpp/MusicPlayer/api/: CMakeLists.txt  api.cc  api.h  api_response.cc  api_response.h  crypto.cc  crypto.h  error.cc  http.cc  http.h  image_provider.cc  image_provider.h  music_api.cc  music_api.h
app/cpp/MusicPlayer/api/data/: banner.cc  banner.h  data.cc  data.h  dj_banner.cc  dj_banner.h  dj_category_excludehot.cc  dj_category_excludehot.h  dj_category_recommend.cc  dj_category_recommend.h  dj_catlist.cc  dj_catlist.h  error.cc  error.h  lyric.cc  lyric.h  personalized.cc  personalized.h  personalized_newsong.cc  personalized_newsong.h  playlist_catlist.cc  playlist_catlist.h  playlist_detail.cc  playlist_detail.h  song_privilege.cc  song_privilege.h  song_url.cc  song_url.h  top_playlist.cc  top_playlist.h  top_playlist_highquality.cc  top_playlist_highquality.h  user_login.cc  user_login.h  user_private_message.cc  user_private_message.h
app/cpp/MusicPlayer/player/: CMakeLists.txt  audio_player.cc  player.cc  player.h
app/cpp/MusicPlayer/repositories/: CMakeLists.txt  app_config.cc  app_config.h  database_repository.cc  database_repository.h  database_response.cc  database_response.h  image_provider.cc  repositories.h  song_category_repository.cc  song_category_repository.h  tables.h
app/cpp/MusicPlayer/repositories/models/: song.cc  song.h
app/cpp/MusicPlayer/repository/: CMakeLists.txt  database_repository.cc  image_provider.cc  image_provider.h  repository.cc  repository.h  tables.h
app/cpp/MusicPlayer/service/: CMakeLists.txt  play_list_repository.cc  service.cc  service.h
app/cpp/MusicPlayer/services/: CMakeLists.txt  play_list_repository.cc  play_list_repository.h  services.h  song_category_repository.cc  song_category_repository.h  user_auth.cc  user_auth.h
app/cpp/MusicPlayer/util/: CMakeLists.txt  cpu_thread_pool_executor.cc  cpu_thread_pool_executor.h  executor.cc  executor.h  json.cc  json.h  logger.cc  logger.h  misc.cc  misc.h  util.cc  util.h
app/cpp/MusicPlayer/view_model/: CMakeLists.txt  base_state_view_model.cc  base_state_view_model.h  states.cc  states.h  view_model.cc  view_model.h
app/cpp/MusicPlayer/view_model/discover_music/dj/: dj_banner_view_model.cc  dj_banner_view_model.h
app/cpp/MusicPlayer/view_model/discover_music/personalized/: banner_view_model.cc  banner_view_model.h  personalized_new_song_view_model.cc  personalized_new_song_view_model.h  recommendation_song_lists_view_model.cc  recommendation_song_lists_view_model.h
app/cpp/MusicPlayer/view_model/discover_music/song_list/: song_category_list_view_model.cc  song_category_list_view_model.h  song_category_play_lists_view_model.cc  song_category_play_lists_view_model.h  song_list_high_quality_banner_view_model.cc  song_list_high_quality_banner_view_model.h
app/cpp/MusicPlayer/view_models/: CMakeLists.txt  banner_view_model.cc  banner_view_model.h  base_state_view_model.cc  base_state_view_model.h  personalized_new_song_view_model.cc  personalized_new_song_view_model.h  recommendation_song_lists_view_model.cc  recommendation_song_lists_view_model.h  song_category_list_view_model.cc  song_category_list_view_model.h  song_list_high_quality_view_model.cc  song_list_high_quality_view_model.h  states.cc  states.h  view_models.cc  view_models.h
app/cpp/MusicPlayer/view_models/discover_music/dj/: dj_banner_view_model.cc  dj_banner_view_model.h
app/cpp/MusicPlayer/view_models/discover_music/personalized/: banner_view_model.cc  banner_view_model.h  personalized_new_song_view_model.cc  personalized_new_song_view_model.h  recommendation_song_lists_view_model.cc  recommendation_song_lists_view_model.h
app/cpp/MusicPlayer/view_models/discover_music/song_list/: song_category_list_view_model.cc  song_category_list_view_model.h  song_category_play_lists_view_model.cc  song_category_play_lists_view_model.h  song_list_high_quality_banner_view_model.cc  song_list_high_quality_banner_view_model.h  song_list_high_quality_view_model.cc  song_list_high_quality_view_model.h
app/cpp/api/: crypto.cc  crypto.h  http.h
app/cpp/test/: CMakeLists.txt  main.cc  set_up.h  test_SongCategoryListViewModel.cc  test_api.cc  test_crypto.cc  test_player.cc  test_repository.cc  test_ui_SongCategoryList.cc
app/python/MusicPlayer/: binding_specs.py  bootstrap.py  common.py  convert.py  datetime_util.py  main.py  object_graph.py  register_qml_types.py  run_app.py  static.py
app/python/MusicPlayer/api/: api.py  (+6 more)
app/python/test/: test_api.py  test_crypto.py  test_top_list.py  test_user.py
ui/: MainNavigationBar.qml  dev.pro  main.qml
ui/MusicPlayer/: Button.qml  MyTabButton.qml  Pane.qml  RoundCorner.qml  TabBar.qml  TabButton.qml
ui/discover_music/: BannerCarousel.qml  Button.qml  DiscoverMusic.qml  PersonalizedNewSongs.qml  RecommendationSongLists.qml
ui/discover_music/dj_radios/: Banner.qml  DJRadios.qml
ui/discover_music/personal_recommendation/: BannerCarousel.qml
ui/discover_music/personalized/: Banner.qml  BannerCarousel.qml  Personalized.qml  PersonalizedNewSongs.qml  RecommendationSongLists.qml
ui/discover_music/song_list/: HighQuality.qml  HighQualityBanner.qml  SongCategoryMenu.qml  SongCategoryPlayLists.qml  SongCategorySelector.qml  SongList.qml
ui/imports/FontAwesome/: FAFonts.qml  FAIcon.qml  FAIcons.qml  create_icons.py  qmldir
ui/imports/MusicPlayer/: MainStackView.qml  Pane.qml  qmldir
ui/song_list/: SongCategoryList.qml  SongCategoryPane.qml  SongList.qml
ui/styles/: variables.mjs
ui/utils/: Border.qml  Carousel.qml  FadeInImage.qml  FlatScrollBar.qml  LinearGradientBlend.qml  Loading.qml  PagingSelector.js  PagingSelector.qml  RoundCorner.qml
(+20 files in other folders)
