file(GLOB_RECURSE SRCS test_*.cc)

add_compile_definitions(QT_NO_FOREACH)
set(TARGETS "")
foreach (SRC_FILE IN LISTS SRCS)
    get_filename_component(FILE_NAME ${SRC_FILE} NAME_WE)
    string(REGEX MATCHALL "([A-Za-z0-9_]+)-?.*" MATCHES "${FILE_NAME}")
    if (MATCHES)
        set(TARGET_NAME ${CMAKE_MATCH_1})
        list(FIND TARGETS ${TARGET_NAME} IDX)
        if (IDX EQUAL "-1")
            list(APPEND TARGETS ${TARGET_NAME})
            set(${TARGET_NAME}_files ${SRC_FILE})
        else ()
            list(APPEND ${TARGET_NAME}_files ${SRC_FILE})
        endif ()
    endif ()

endforeach ()

foreach (TARGET IN LISTS TARGETS)
    add_executable(${TARGET} main.cc ${${TARGET}_files})
    target_link_libraries(${TARGET} PRIVATE api view_models)
    if (WIN32)
        if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
        target_link_options(${TARGET} PRIVATE "/DEBUG:FASTLINK")
    endif()
    endif()
endforeach ()
